--- a/Docente/viewCalendarioEscolar2.html
+++ b/Docente/viewCalendarioEscolar2.html
@@ -26,7 +26,7 @@
 		<div class="nav-wrap">
 			<nav>
 				<span class="toggle-menu">Menú</span>
-				<a href="#" class="search-form" id="nombreUsuario">
+				<a href="perfilDocente.html" class="search-form" id="nombreUsuario">
 					
 				</a>
 				<ul>
