--- a/Administracion/responderSolicitudes.html
+++ b/Administracion/responderSolicitudes.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Venezuela 90 | Rececpción y Gestión De Solicitudes</title>
+	<title>Venezuela 90 | Gestion De Libros</title>
 	<link rel="stylesheet" href="../css/genericons.css">
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
@@ -14,7 +14,6 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/admins.js"></script>
-	<script src="../js/gestionSolicitudes.js"></script>
 </head>
 <body class="p-admision">
 
@@ -27,7 +26,7 @@
 			<nav>
 				<span class="toggle-menu">Menú</span>
 				<a href="perfilAdministracion.html" class="search-form" id="nombreUsuario">
-				
+					
 				</a>
 				<ul>
 					<li><a href="../index.html">Inicio</a></li>
@@ -56,6 +55,7 @@
 						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
+						<li><a href="#">Tramitacion De Documentos</a></li>
 					</ul>
 				</div>
 			</article>
@@ -140,77 +140,103 @@
 		<!-- LADOOOO DERECHOOOOOOOOOOOOOOOOOO -->
 		<div class="sidebar-wrap estilo-sidebar-wrap">
 			<article id="intranetPrincipal">
-				<header><h2>Recepción y Gestión De Solicitudes</h2></header>
+				<header><h2>Responder Solicitud</h2></header>
 				<hr />
 			</article>
+			<!--<article id="noticias">
+				<header><h3>Seleccionar Una Opción</h3></header>
+				<div id="contenidoNoticias" class="estiloGestionLibros">
+					<ul id="listaGestion">
+						<li><a id="iconoconsultar" href="#"></a><a class="textoAbajo" href="#">Registro De Libros</a></li>
+						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Registro De Prestamos De Libros</a></li>
+					</ul>							
+				</div>				
+			</article>-->
 			<article id="noticias">
-				<!-- Contenidooooooooo -->
-				<article class="centrar margenLibroClass">
-					<header>
-						<h3>Consultar Las Solicitudes</h3>
-					</header>					
-					<div id="formulario">
-						<label id="nomLibro" name="nombreLibro">Consultar Por: </label>
-						<select id="tipoSolicitud">
-							<option value="1" class="centrar">----------------------------</option>
-							<option value="2" class="centrar">Tipo De Solicitud</option>
-							<option value="3" class="centrar">Fecha</option>
-							<option value="4" class="centrar">Estado De La solicitud</option>
-							<option value="5" class="centrar">Todas</option>
-						</select>
-						<div class="formSolicitud" id="sinNom">
-							<label  name="TipoS">Seleccionar</label>
-							<select id="tipoSoli" name="TipoS">
-								<option class="centrar">---------------------------------------</option>
-								<option class="centrar">Constancia de Buena Conducta</option>
-								<option class="centrar">Constancia de Estudio</option>
-								<option class="centrar">Constancia de Inscripcion</option>
-								<option class="centrar">Constancia de Notas</option>
-								<option class="centrar">Constancia de Permiso</option>
-								<option class="centrar">Constancia de Retiro</option>
-								<option class="centrar">Constancia de Sueldo</option>
-								<option class="centrar">Constancia de Trabajo</option>
-							</select>
-						</div>
-						<div class="formSolicitud" id="fechaSolicitud">
-							<label name="FechaS">Ingresar Fecha</label>
-							<input type="date" name="FechaS" id="FechaS2">
-						</div>
-						<div class="formSolicitud" id="estadoSolicitud">
-							<label name="EstadoS">Seleccionar</label>
-							<select id="estadoSoli" name="EstadoS">
-								<option>---------------------</option>
-								<option>Por Responder</option>
-								<option>Respondida</option>
-							</select>
-						</div>
-						<button type="button" id="buscarSolicitud" class="formSolicitud">Consultar</button>
-					</div>								
-				</article>	
-
-				<article  class="centrar margenLibroClass" id="mostrarSoli">
-					<header>
-						<h3>Solicitudes</h3>
-					</header>
-					<table id="tablaSolicitudes">						
-						<thead>
-							<tr class="columnaSolicitud">
-								<td>No. Solicitud</td>
-								<td>Tipo Solicitud</td>
-								<td>Fecha Envío</td>
-								<td>Estatus</td>
-							</tr>
-						</thead>
-						<tbody id="tbodyGS">
-						</tbody>
-					</table>
-					<div id='divGS'>
-					</div>
-				</article>	
+				<header><h3>Solicitud</h3></header>
+				<section id="solicDatos"> 
+					<fieldset> 
+						<legend>Solicitud Realizada Por</legend>
+						<input type="text" name="" value="" placeholder="Nombre">
+						<input type="text" name="" value="" placeholder="Cedula Solicitud">
+						<input type="text" name="" value="" placeholder="Tipo solicitud">
+					</fieldset>
+				</section>
+				<section id="solicDetalles">
+					<fieldset> 
+						<legend>Detalles de la Solicitud</legend>
+						 <textarea id="textArea" disabled></textarea>
+					</fieldset>
+				</section>
+				<table border=1 class="tabReSolDet">
+					<thead>
+						<tr>
+							<td>Indicaciones</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+							Debe describir la solicitud.
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</td>
+						</tr>
+					</tbody>	
+				</table>		
+				<table border=1 class="tabReSolDet">
+					<thead>
+						<tr>
+							<td>Detalles De La Solicitud</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+							Comentarios Del Docente
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</td>
+						</tr>
+					</tbody>	
+				</table>	
+				<table border=1 class="tabReSolDet">
+					<thead>
+						<tr>
+							<td>Respuesta De La Solicitud</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</p>
+							</td>
+						</tr>
+					</tbody>	
+				</table>
+				<div id="atr" class="atras2">
+					<a id="atras"></a>
+					<a id="at">Atrás</a>
+				</div>	
 			</article>
-
 		</div>
 	</section>
+
+
 
 <footer class="site-footer" role="contentinfo">
 	<div class="site-info">
