--- a/Administracion/responderSolicitudes.html
+++ b/Administracion/responderSolicitudes.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+	<!--link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'-->
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
@@ -154,60 +154,28 @@
 			</article>-->
 			<article id="noticias">
 				<header><h3>Solicitud</h3></header>
-				<section id="solicDatos"> 
+				<section class="containerDatos">
+					<div class="solicDatos"> 
 					<fieldset> 
 						<legend>Solicitud Realizada Por</legend>
 						<input type="text" name="" value="" placeholder="Nombre">
 						<input type="text" name="" value="" placeholder="Cedula Solicitud">
 						<input type="text" name="" value="" placeholder="Tipo solicitud">
 					</fieldset>
-				</section>
-				<section id="solicDetalles">
+				</div>
+				<div class="solicDetalles">
 					<fieldset> 
 						<legend>Detalles de la Solicitud</legend>
 						 <textarea id="textArea" disabled></textarea>
 					</fieldset>
-				</section>
-				<table border=1 class="tabReSolDet">
-					<thead>
-						<tr>
-							<td>Indicaciones</td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>
-							Debe describir la solicitud.
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						</td>
-						</tr>
-					</tbody>	
-				</table>		
-				<table border=1 class="tabReSolDet">
-					<thead>
-						<tr>
-							<td>Detalles De La Solicitud</td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>
-							Comentarios Del Docente
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						</td>
-						</tr>
-					</tbody>	
-				</table>	
+				</div>
+				<div class="solicRespuesta">
+					<fieldset> 
+						<legend>Respuesta de La Solicitud</legend>
+						 <textarea id="textArea"></textarea>
+					</fieldset>
+				</div>
+				</section>	
 				<table border=1 class="tabReSolDet">
 					<thead>
 						<tr>
