--- a/Administracion/recepcionGestionSolicitudes.html
+++ b/Administracion/recepcionGestionSolicitudes.html
@@ -170,6 +170,8 @@
 								<option class="centrar">Constancia de Retiro</option>
 								<option class="centrar">Constancia de Sueldo</option>
 								<option class="centrar">Constancia de Trabajo</option>
+								<option class="centrar">Permiso de Aulas Para Eventos Estudiantiles</option>
+								<option class="centrar">Permiso de Equipos Audiovisuales</option>
 							</select>
 						</div>
 						<div class="formSolicitud" id="fechaSolicitud">
