--- a/Administracion/responderSolicitudes.html
+++ b/Administracion/responderSolicitudes.html
@@ -8,12 +8,13 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-	<!--link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'-->
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/admins.js"></script>
+	<script src="../js/responderSolicitud.js"></script>
 </head>
 <body class="p-admision">
 
@@ -157,51 +158,43 @@
 				<section class="containerDatos">
 					<div class="solicDatos"> 
 					<fieldset> 
-						<legend>Solicitud Realizada Por</legend>
-						<input type="text" name="" value="" placeholder="Nombre">
-						<input type="text" name="" value="" placeholder="Cedula Solicitud">
-						<input type="text" name="" value="" placeholder="Tipo solicitud">
+						<legend align="center">Solicitud Realizada Por</legend>
+						<input type="text" placeholder="Nombre" id="nomb" disabled>
+						<input type="text" placeholder="Cedula Solicitud" id="cedI" disabled>
+						<input type="text" placeholder="Tipo solicitud" id="tipoS" disabled>
+						<input type="hidden" id="fechaSoli" >
+						<input type="hidden" id="estado" value="Respondida" >
+						<input type="text" id="mail" disabled>
 					</fieldset>
 				</div>
 				<div class="solicDetalles">
-					<fieldset> 
-						<legend>Detalles de la Solicitud</legend>
+					<fieldset > 
+						<legend align="center">Detalles de la Solicitud</legend>
 						 <textarea id="textArea" disabled></textarea>
 					</fieldset>
 				</div>
 				<div class="solicRespuesta">
 					<fieldset> 
-						<legend>Respuesta de La Solicitud</legend>
-						 <textarea id="textArea"></textarea>
+						<legend align="center">Respuesta de La Solicitud</legend>
+						 <textarea id="textArea2"></textarea>
 					</fieldset>
 				</div>
-				</section>	
-				<table border=1 class="tabReSolDet">
-					<thead>
-						<tr>
-							<td>Respuesta De La Solicitud</td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-							</td>
-						</tr>
-					</tbody>	
-				</table>
-				<div id="atr" class="atras2">
-					<a id="atras"></a>
-					<a id="at">Atrás</a>
+				<br>
+				<div class="centrar">	
+					<input type="button" value="Responder Solicitud" id="responderSolic">
 				</div>	
+
+				</section>	
+				<div id="atr" class="atras2">
+					<a id="atras" href="recepcionGestionSolicitudes.html"></a>
+					<a id="at" href="recepcionGestionSolicitudes.html">Atrás</a>
+				</div>	
+
 			</article>
+			<div id="msj"></div>
+			<div id="otroDiv"></div>
 		</div>
+
 	</section>
 
 
