--- a/Administracion/consultarPlanEstudioSemanal.html
+++ b/Administracion/consultarPlanEstudioSemanal.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
+	<link rel="stylesheet" href="../css/planSemanalPrint.css" media="print">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
@@ -55,7 +56,7 @@
 						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
 						<li><a href="#">Usuarios</a></li>
 						<li><a href="gestion.html">Procesos De Gestión</a></li>
-						<li><a href="#">Tramitacion De Documentos</a></li>
+						
 					</ul>
 				</div>
 			</article>
@@ -140,11 +141,11 @@
 		<!-- LADOOOO DERECHOOOOOOOOOOOOOOOOOO -->
 		<div class="sidebar-wrap estilo-sidebar-wrap">
 			<article id="intranetPrincipal">
-				<header><h2>Plan De Estudio Por Lapso</h2></header>
+				<header class="titulo"><h2>Plan De Estudio Por Lapso</h2></header>
 				<hr />
 			</article>
 			<article id="noticias">
-				<header><h3>Consultar Plan De Estudio Por Lapso</h3></header>
+				<header class="titulo"><h3>Consultar Plan De Estudio Por Lapso</h3></header>
 				<div class="planSem centrar">
 					<div class="disIn disInUno">
 						<figure>
@@ -216,7 +217,7 @@
 						</tr>
 				</table>
 				<ul id="listaGestion">
-					<li><a id="bloque2" href="#"></a><a class="textoAbajo" href="#">Imprimir</a></li>
+					<li><a id="bloque2" onclick="window.print(); void 0"></a><a class="textoAbajo" onclick="window.print(); void 0">Imprimir</a></li>
 				</ul>
 				</div>				
 			</article>
