--- a/Administracion/viewCalif.html
+++ b/Administracion/viewCalif.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+	<!--<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>-->
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
@@ -229,7 +229,8 @@
 				<div class="centrar">
 					<button id="modif" class="butM">Modificar</button>
 					<button id="guar"  class="butM">Guardar</button>
-				</div>
+					<button id="calc"  class="butM">Calcular</button>
+ 				</div>
 			</article>
 
 		</div>
